--- a/src/MarvelCards/MarvelCards/Views/HeroCard.xaml
+++ b/src/MarvelCards/MarvelCards/Views/HeroCard.xaml
@@ -5,29 +5,25 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:skia="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms"
     mc:Ignorable="d">
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="200" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <BoxView
-            Grid.Row="1"
-            BackgroundColor="{Binding HeroColor}"
-            CornerRadius="30,30,0,0"
-            HeightRequest="0"
+        <skia:SKCanvasView
+            x:Name="CardBackground"
             HorizontalOptions="Fill"
+            PaintSurface="CardBackground_PaintSurface"
             VerticalOptions="Fill" />
+
         <Image
             x:Name="HeroImage"
-            Grid.Row="1"
             HeightRequest="400"
             Source="{Binding Image}"
-            TranslationY="-150"
+            TranslationY="50"
             VerticalOptions="Start"
             WidthRequest="400" />
-        <StackLayout Grid.Row="1" Margin="40,200,40,30">
+
+        <StackLayout Margin="40,400,40,30">
             <Label
                 HorizontalOptions="Start"
                 LineHeight=".85"
@@ -48,6 +44,4 @@
                 VerticalOptions="Start" />
         </StackLayout>
     </Grid>
-
-
 </ContentView>
